fixed overflowing text and added in test logo to check layout

--- a/src/styles/linkModule.css
+++ b/src/styles/linkModule.css
@@ -10,5 +10,5 @@
 }
 
 .linkTitle {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
